@@ -42,6 +42,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+            <version>6.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
             <version>6.2.4</version>
         </dependency>
@@ -57,6 +67,7 @@
                     <skip>false</skip>
                     <executable>java</executable>
                     <arguments>
+                        <argument>--enable-native-access=javafx.graphics</argument>
                         <argument>-Dorg.lwjgl.util.Debug=true</argument>
                         <argument>-Djava.library.path=libs</argument>
                         <argument>--module-path=../mods-mvn</argument>
